<resources>
    <string name="app_name">LObedix</string>
    <string name="restaurant_name">L\'Obedix</string>
    <string name="settings">Settings</string>
    <string name="language_french">French</string>
    <string name="ingredients">Ingrédients</string>
    <string name="noResults">Nous ne proposons malheureusement pas le plat que vous avez recherché. N\'hésitez pas à le proposer dans le livre d\'or!</string>


    <string name="ingredient_lasagnes">Tomates, courgettes, poivre, sel, basilic, herbes de provence, lasagnes, coulis de tomate, oignons, béchamel</string>
    <string name="ingredient_curry">Poulet, riz, oignon, crème fraîche, curry, cumin, piment, sel poivre</string>
    <string name="ingredient_ratatouille">Aubergine, courgette, poivron, oignon, tomate, ail, huile d\'olive, thym, laurier, sel, poivre</string>
    <string name="ingredient_spaghetti">Spaghetti, oignon, ail, carotte, céleri, tomate, vin rouge, boeuf hâché, persil, sucre, huile d\'olive</string>

    <string name="ingredient_feuillete">Pâte feuilletée, emmental, comté, tome, oeufs, crème fraîche, sel, poivre, noix de muscade, lait</string>
    <string name="ingredient_soupe">Aubergine, courgette, tomate, poivron, oignon, ail, basilic, huile d\'olive, sel, poivre</string>
    <string name="ingredient_tomates">Tomate, mozzarella, basilic, huile d\'olive, sel, poivre</string>
    <string name="ingredient_taboule">Semoule, tomate, concombre, oignon, citron, huile d\'olive, menthe, persil, ciboulette, cerfeuil, sel, poivre</string>

    <string name="ingredient_mousse">Oeufs, chocolat, sucre vanillé</string>
    <string name="ingredient_creme">Oeufs, sucre, crème, vanille, liqueur d\'orange</string>
    <string name="ingredient_glace">lait, sucre, oeufs, crème fraîche, vanille</string>
    <string name="ingredient_salade">Pomme, banane, orange, pamplemousse, kiwi, raisin noir, jus de citron, sucre</string>


    <string name="opinions">3 avis</string>
    <string name="opinions_lasagnes"> <u>3 avis </u></string>
    <string name="description_lasagnes"> <u>Le mot du chef: </u> \n Plates, mais avec de la personnalité. UN plat de pâtes plates, ça m\'éclate !</string>


    <string name="nos_menus">Nos Menus</string>
    <string name="a_la_carte">À la Carte</string>
    <string name="coups_de_pouce">Coup De\nPouce</string>


    <string name="nom1">André Gretil</string>
    <string name="avis1">Ce plat est vraiment un délice, j\'ai adoré.</string>
    <string name="nom2">Béatrive Langré</string>
    <string name="avis2">Agréablement surprise de trouver un plat végétarienne, moi qui ne mange pas de viande</string>
    <string name="nom3">Camille Tavernier</string>
    <string name="avis3">Très bon :)</string>
    <string name="avis"><u>Avis des clients:</u></string>


    <string name="taboule">6€ Taboulé oriental</string>
    <string name="soupe">5€ Soupe de légumes du Soleil</string>
    <string name="feuillete">7€ Feuilleté au fromage</string>
    <string name="tomates">6€ Salade tomates mozzarella</string>

    <string name="lasagnes">15€ Lasagnes végétariennes</string>
    <string name="spaghetti">12€ Spaghetti Bolognaise</string>
    <string name="pouletCurry">14€ Curry de Poulet</string>
    <string name="ratatouille">11€ Ratatouille</string>

    <string name="mousse">7€ Mousse au chocolat</string>
    <string name="creme">7€ Crème brûlée</string>
    <string name="salade">6€ Salade de fruits</string>
    <string name="glace">4€ Glace à la vanille</string>


    <string name="desserts">Nos desserts</string>
    <string name="plats">Nos plats</string>
    <string name="entrees">Nos entrées</string>
    <string name="unPetitApero">Un petit Apéro ?</string>
    <string name="enfantOuAdulte">Enfant ou Adulte ?</string>

    <string name="valeursNutritionelles">Valeurs Nutritionelles</string>

    <string name="txtCaloriesLasagnes">CALORIES : un peu trop calorique</string>
    <string name="valCaloriesLasagnes">451 kCal</string>
    <string name="txtLegumesLasagnes">LEGUMES : un peu de légumes</string>
    <string name="txtpasLegumes">LEGUMES : pas de légumes </string>
    <string name="valPasLegumes">0%</string>
    <string name="valLegumesLasagnes">41%</string>
    <string name="txtSelLasagnes">SEL : peu de sel</string>
    <string name="valSelLasagnes">0,5g</string>
    <string name="txtGraissesLasagnes">GRAISSES SATUREES : Faible impact</string>
    <string name="valGraissesLasagnes">3,5g</string>
    <string name="txtBcpLegumes">LEGUMES : Parfait</string>
    <string name="valBcpLegumes">95%</string>
    <string name="txtSelOrange">SEl : Un peu trop salé</string>
    <string name="valSelOrange">1.5g</string>
    <string name="txtBcpSucre">SUCRE : Trop sucré</string>
    <string name="valSucretrop">30g</string>
    <string name="txtCaloriesParfait">CALORIES : Parfait</string>
    <string name="txtlegumesOrange">LEGUMES : très peu de légumes</string>
    <string name="vallegumesOrange">15%</string>
    <string name="valCaloriesParfait">350 kCal</string>
    <string name="txtSucreLasagnes">SUCRE : Faible impact</string>
    <string name="valSucreLasagnes">0,7g</string>
    <string name="menu_jour">Menu du jour</string>
    <string name="menu_simple">Formule simple</string>
    <string name="txtBcpFruits">FRUITS : Parfait</string>
    <string name="txtPeuCalorique">CALORIES : peu calorique</string>
    <string name="valPeuCalorique">140 kCal</string>
    <string name="txtLegumesOrange">LEGUMES : très peu de légumes</string>
    <string name="valLegumesOrange">10%</string>

    <string name="menu_vege">Menu végétarien</string>
    <string name="menuJour">Menu du jour</string>
    <string name="menuSimple">Formule simple</string>
    <string name="menuVege">Menu végétarien</string>


    <string name="ajouterCommande">Ajouter à la commande</string>

    <string name="sucre_sale">Sucré ou salé ?</string>
    <string name="chaud_froid">Chaud ou Froid ?</string>
    <string name="healthy">D\'humeur healthy ?</string>
    <string name="exotique">Envie d\'ailleurs ?</string>
    <string name="vegetarien">Végétarien ?</string>
    <string name="petite_glace">Une petite glace ?</string>
    <string name="chocolat">Passion chocolat ?</string>
    <string name="petite_soupe">Une petite soupe ?</string>

    <string name="feuilleteMenu">Feuilleté au fromage</string>
    <string name="spaghettiMenu">Spaghetti Bolognaise</string>
    <string name="mousseMenu">Mousse au chocolat</string>
    <string name="prixMenuJour">Prix du menu: 24€</string>

    <string name="curryMenu">Poulet au Curry</string>
    <string name="saladeMenu">Salade de Fruits</string>
    <string name="prixFormuleSimple">Prix du menu: 18€</string>

    <string name="tabouleMenu">Taboulé oriental</string>
    <string name="lasagnesMenu">Lasagnes végétariennes</string>
    <string name="cremeMenu">Crème brûlée</string>
    <string name="prixMenuVege">Prix du menu: 22€</string>

    <string name="Boisson">Boisson</string>

    <string name="Boisson_creme">3€ Vin Blanc Moelleux Monbazillac</string>
    <string name="Description_Boisson_creme">Vin vraiment concentré, mais toujours équilibré, saura relever vos desserts (prix au verre).</string>

    <string name="Boisson_mousse">6€ Domaine Madeloc Cirera - Rouge</string>
    <string name="Description_Boisson_mousse">Un joli nez de cerise noire, et une bouche voluptueuse, aux tannins soyeux. Le sucre équilibré par l\'aromatique et les tannins arrondissent la bouche et l\'allonge (prix au verre). </string>

    <string name="Boisson_glace">3€ Muscat Petit Grain Saint Jean de Minervois</string>
    <string name="Description_Boisson_glace">Le Muscat de Saint Jean de Minervois est un vin doux issu des vendanges manuelles (prix au verre).</string>

    <string name="Boisson_salade">5€ Goose Island Sofie </string>
    <string name="Description_Boisson_salade">Une saison vieillie en fût aux arômes d\'épices, d\'orange, de levure et de citron (35,5 cl).</string>

    <string name="Boisson_feuillete">6€ Vin Rouge Haut Médoc Cru Bourgeois Château Clément-Pichon</string>
    <string name="Description_Boisson_feuillete">Robe sombre. Ample et rond en attaque, le palais réussit l\'alliance du gras et du fruit, avec toujours beaucoup de fraicheur et un peu l\'amertume en finale (prix au verre)</string>

    <string name="Boisson_tomate">3€ Beaujolais Villages «Rouge»</string>
    <string name="Description_Boisson_Tomate">Fruité à la robe cerise , en laissant s\’exprimer ses tanins agréables , il s\’impose comme un vin particulièrement équilibré (prix au verre).</string>

    <string name="Boisson_taboulet">3€ Vin Rosé Tavel La Cave d\'Augustin Florent</string>
    <string name="Description_Boisson_taboulet">Après un an de bouteile ce rosé de Tavel haut en couleurs évolue vers un beau fruit évoquant les fraises des bois saupoudrées par du poivre concassée (prix au verre).</string>

    <string name="Boisson_spaghetti">8€ Vin Rouge Gevrey Chambertin Jean Bouchard</string>
    <string name="Description_boisson_spaghetti">Vin harmonieux et gourmand, délicatement fruité, laissant place à une finale plus minérale.</string>

    <string name="Boisson_curry">5€ Crozes-Hermitage</string>
    <string name="Description_Boisson_curry">La prestigieuse maison Guigal signe un crozes-hermitage souple sur des arômes épicés apportés par la syrah (prix au verre).</string>

    <string name="Boisson_lasagnes">3€ Vin Rosé Coteaux d\'Aix en Provence Château Virant</string>
    <string name="Description_Boisson_lasagnes">Notes de bonbons anglais (prix au verre).</string>

    <string name="Boisson_ratatouille">6€ BANDOL ROUGE - DOMAINE LA BASTIDE BLANCHE</string>
    <string name="Description_boisson_ratatouille">Ce vin présente une belle robe sombre, un nez puissant et sauvage qui associe des notes de réglisse, d\'épices et de fruits noirs (prix au verre).</string>

    <string name="Boisson_soupe">4€ Vin Rosé Côtes de Provence Cru Classé Château Roubine "Réserve"</string>
    <string name="Description_boisson_soupe">Un rosé provençal typique de son cru. Il se dévoile avec des nunces joliment épicées et une élégance de texture en bouche. Harmonieux et fin (prix au verre).</string>

    <string name="vinRouge">5€ vin rouge</string>
    <string name="vinBlanc">4€ vin blanc</string>
    <string name="biere">5€ bière</string>
    <string name="eauPetillante">3.5€ eau pétillante</string>

    <string name="voirCommande">Voir ma commande</string>
    <string name="masquerCommande">Masquer ma commande</string>
    <string name="gererCommande">Gerer ma commande</string>

</resources>
