<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dish_Informations">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/back"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/restaurant_name"
                android:textSize="30sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/france" />
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/param"/>
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="606dp"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background = "@drawable/menu_icon"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="277dp"
                    android:src="@drawable/lasagnes" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:text="@string/lasagnes"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp">

                <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:numStars="5"
                    android:rating   = "4" />

                <TextView
                    android:id="@+id/opinions"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:text="@string/opinions_lasagnes"
                    android:textSize="10sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/dish_description"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:text="@string/description_lasagnes"
                android:textSize="10sp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="60dp"
                    android:background = "@drawable/conseil_boisson"/>


                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:background = "@drawable/nutriscore_c"/>


            </LinearLayout>


        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</LinearLayout>